Services, Load Balancing and Networking/gateway-api/manifests/splitting-traffic-blue-green.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-last-1
  namespace: projectcontour
spec:
  selector:
    matchLabels:
      app: demo-app-last-1
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-app-last-1
    spec:
      containers:
        - name: demo-app-last-1
          image: nginx:latest
          ports:
            - containerPort: 81
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/app1.conf
              subPath: app1.conf
              readOnly: true
            - name: nginx-content
              mountPath: /usr/share/nginx/html/demo1.html
              subPath: demo1.html
              readOnly: true
      volumes:
        - name: nginx-content
          configMap:
            name: nginx-content
            items:
              - key: demo1.html
                path: demo1.html
        - name: nginx-config
          configMap:
            name: nginx-config-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-last-2
  namespace: projectcontour
spec:
  selector:
    matchLabels:
      app: demo-app-last-2
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-app-last-2
    spec:
      containers:
        - name: demo-app-last-2
          image: nginx:latest
          ports:
            - containerPort: 82
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/app2.conf
              subPath: app2.conf
              readOnly: true
            - name: nginx-content
              mountPath: /usr/share/nginx/html/demo2.html
              subPath: demo2.html
              readOnly: true
      volumes:
        - name: nginx-content
          configMap:
            name: nginx-content
            items:
              - key: demo2.html
                path: demo2.html
        - name: nginx-config
          configMap:
            name: nginx-config-2   

---
apiVersion: v1
kind: Service
metadata:
  name: demo-service-1
  namespace: projectcontour
spec:
  type: ClusterIP
  selector:
    app: demo-app-last-1
  ports:
    - port: 80
      targetPort: 81

---
apiVersion: v1
kind: Service
metadata:
  name: demo-service-2
  namespace: projectcontour
spec:
  type: ClusterIP
  selector:
    app: demo-app-last-2
  ports:
    - port: 80
      targetPort: 82
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: contour
spec:
  controllerName: projectcontour.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: projectcontour
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-http-route-bg
  namespace: projectcontour
spec:
  parentRefs:
    - name: demo-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /demo
      backendRefs:
        - name: demo-service-1
          port: 80
          weight: 90
        - name: demo-service-2
          port: 80
          weight: 10
